dnl Process this file with autoconf to produce a configure script.
AC_INIT(ctors.c)
AM_INIT_AUTOMAKE(libmpc.a, 1.0)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_PROG_RANLIB

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

AC_OUTPUT(Makefile)
