dnl Process this file with autoconf to produce a configure script.
AC_INIT(main.cpp)

AM_INIT_AUTOMAKE(robnav.txt, 1.0)

dnl Checks for programs.
dnl     CXX=powerpc-eabi-g++
AC_PROG_CXX
dnl     CC=powerpc-eabi-gcc
AC_PROG_CC
AC_PROG_MAKE_SET

dnl Checks for libraries.
dnl Replace `main' with a function in -lc:
AC_CHECK_LIB(c, main)
dnl Replace `main' with a function in -lmpc555:
AC_CHECK_LIB(mpc555, main)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(sys/time.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_STRUCT_TM

dnl Checks for library functions.

AC_OUTPUT(Makefile)
